@@ -1,0 +1,27 @@
+Comment:
+
+        A set of test headers to test parameter list parsing
+	with mail.mime.parameters.strict=false.
+        Use with:
+	java -Dmail.mime.parameters.strict=false paramtest -p <paramdatanostrict
+
+        CAREFUL: a blank line in this file causes everything following it
+                 to be ignored until a line starting with "From " (so that
+                 paramtest -p can be pointed at a real mailbox).
+
+From start here
+Content-Type: text/plain;
+ creation-date=Tue, 22 Jul 2008 10:03:09 GMT;
+ filename="test1kb.file";
+ modification-date=Tue, 22 Jul 2008 10:03:24 GMT
+Expect: 3
+	creation-date=Tue, 22 Jul 2008 10:03:09 GMT
+	filename=test1kb.file
+	modification-date=Tue, 22 Jul 2008 10:03:24 GMT
+Content-Type: text/plain; name=file name.txt
+Expect: 1
+	name=file name.txt
+Content-Type: text/plain; name=file name.txt ; time= now
+Expect: 2
+	name=file name.txt 
+	time=now
